Fix CSS overlap issue

--- a/src/aura/PSTimeline/PSTimeline.css
+++ b/src/aura/PSTimeline/PSTimeline.css
@@ -11,11 +11,11 @@
 }
 
 .THIS #resetDiv {
-	position: absolute; top: 0px; right: 0px; z-index: 999; padding: 3px; 
+	position: absolute; top: 0px; right: 0px; z-index: 5; padding: 3px; 
 }
 
 .THIS #fitDiv {
-	position: absolute; top: -2px; left: 0px; z-index: 999; padding: 5px; 
+	position: absolute; top: -2px; left: 0px; z-index: 5; padding: 5px; 
 }
 
 
